# gakusai2024-backend

./: .env.sample  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  flake.nix  rust-toolchain.toml  shell.nix
.github/workflows/: rust.yml
docs/: guide.md
entity/: Cargo.toml
entity/src/: hello.rs  lib.rs  task.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240915_062259_create_hello_table.rs  m20241004_014513_create_task_table.rs  m20241004_030615_create_user_table.rs  m20241008_232913_update_task_table.rs
src/: domain.rs  error.rs  lib.rs  main.rs
src/domain/: hello.rs  repository.rs  task.rs
src/domain/repository/: hello.rs  repository.rs  task.rs
src/e2e_test/: hello.rs
src/infrastructure/: db.rs
src/infrastructure/db/: hello.rs  task.rs
src/interface/: handler.rs
src/interface/handler/: hello.rs  task.rs
src/usecase/: hello.rs  task.rs
tests/: hello_test.rs  task_test.rs
