[package]
name = "gakusai2024_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "gakusai2024_backend" 
path = "src/lib.rs"  

[dependencies]
prost = "0.13.5"
tokio = { version = "1.44.1", features = ["full"] }
tonic = "0.13.0"
env_logger = "0.11.7"
log = "0.4.27"
sea-orm = {version = "1.1.8", features = ["mock", "sqlx-postgres", "runtime-tokio-native-tls"] }
entity ={ path = "./entity" }
thiserror = "2.0.12"
anyhow = "1.0.97"
time = "0.3.41"
prost-types = "~0.13.5"
mockall = "0.13.1"
tokio-stream = "0.1.17"
tower = {version = "0.5.2", features = ["util"] }
hyper-util = "0.1.11"
dotenv = "0.15.0"
uuid = {version = "1.16.0", features = ["v4"] }
tonic-reflection = "0.13.0"
gakusai2024-proto = { git = "ssh://git@github.com/shinbunbun/gakusai2024-proto.git", rev = "ceec9f350ed8c8599261284c7fad20a82702b6f2", version = "0.1.0" }

[build-dependencies]
tonic-build = "0.12.2"

[workspace]
members = ["entity","migration"]
